--- a/templates/documentation/edit.html
+++ b/templates/documentation/edit.html
@@ -134,9 +134,9 @@
             <div class="modal-body">
                 Are you sure you want to delete "<span id="documentTitle"></span>"?
             </div>
-            <div class="modal-footer d-flex justify-content-end">
-                <button type="button" class="btn btn-secondary me-2" data-bs-dismiss="modal">Cancel</button>
-                <form id="deleteForm" method="POST" style="display: inline; margin: 0;">
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <form id="deleteForm" method="POST" class="d-inline m-0">
                     <button type="submit" class="btn btn-danger">Delete</button>
                 </form>
             </div>
