--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -5,7 +5,7 @@
     <div class="col-md-6">
         <div class="card">
             <div class="card-header">
-                <h2 class="text-center">Login</h2>
+                <h2 class="text-center">Register</h2>
             </div>
             <div class="card-body">
                 <form method="POST">
@@ -18,11 +18,11 @@
                         <input type="password" class="form-control" id="password" name="password" required>
                     </div>
                     <div class="d-grid">
-                        <button type="submit" class="btn btn-primary">Login</button>
+                        <button type="submit" class="btn btn-primary">Register</button>
                     </div>
                 </form>
                 <div class="text-center mt-3">
-                    <p>Don't have an account? <a href="{{ url_for('auth.register') }}">Register here</a></p>
+                    <p>Already have an account? <a href="{{ url_for('auth.login') }}">Login here</a></p>
                 </div>
             </div>
         </div>
